--- a/sharehelp.html
+++ b/sharehelp.html
@@ -1,14 +1,11 @@
-
- <!DOCTYPE html>
-<meta charset="UTF-8"> 
- <html lang="en">
- <head>
-   <title>Share'n help</title>
- </head>
- <body>
- 
- <h1>t1</h1>
- <p>p1</p>
- 
- </body>
- </html>
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8" />
+        <title>Ma page web</title>
+    </head>
+    <body>
+        <h1>Ma page web</h1>
+        <p>Aujourd'hui nous sommes le <?php echo date('d/m/Y h:i:s'); ?>.</p>
+    </body>
+</html>
